# esp32_ml_benchmark

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  sdkconfig
docs/: ARCHITECTURE.md  SETUP.md
main/: CMakeLists.txt  constants.h  main.cpp  main_functions.cpp  main_functions.h  model.h  model_manager.cpp  model_manager.h  output_handler.h
main/models/cnn/: cnn_model_float32.cpp  cnn_model_int8.cpp  model8.h
main/models/person_detection/: README.md  model.h
main/models/rnn/: model32.h  model8.h  rnn_model_float32.cpp  rnn_model_int8.cpp
main/models/sine/: model.cpp  model32.h  model8.h  sine_model_float32.cpp  sine_model_int8.cpp
main/utils/: csv_logger.h  output_handler.h
models_source/: cnn_model_float32.tflite  cnn_model_int8.tflite  rnn_model_float32.tflite  rnn_model_int8.tflite  sine_model.tflite  sine_model_float32.tflite  sine_model_int8.tflite
scripts/: generate_cnn_model.py  generate_rnn_file.py  generate_sine_model.py
